--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
 
     <!-- Video Player -->
     <div class="player_two">
-        <video   controls width="300">
+        <video id="vid"  controls width="300">
             <source   src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
             Your browser does not support the video element.
         </video>
